Add real-time transfer speed calculation for migrations
Added transfer speed monitoring to provide better visibility into migration performance and help estimate completion times.

Backend changes (app.py):
- Parse elapsed time from Proxmox log lines (e.g., "in 30m 41s")
- Support multiple time formats: hours, minutes, seconds
- Calculate average transfer speed: (transferred_gib * 1024) / elapsed_seconds
- Add speed_mib_s field to progress API response
- Speed updates automatically with each API poll

Frontend changes (index.html):
- Display transfer speed next to progress percentage
- Format: "Progress: 67% (32.6 MiB/s)"
- Speed shown in smaller font to keep UI clean
- Updates in real-time as migration progresses

Example output:
- Progress: 67% (32.6 MiB/s)
- 67.9 GiB of 101.0 GiB (mirror-sata0, mirror-sata1)

The speed represents average transfer rate since migration start, providing a realistic estimate for total migration time.

--- a/index.html
+++ b/index.html
@@ -5386,6 +5386,11 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                                     <div className="flex items-center justify-between text-xs mb-1">
                                       <span className={isAutomated ? 'text-blue-600 dark:text-blue-400 font-semibold' : 'text-purple-600 dark:text-purple-400 font-semibold'}>
                                         Progress: {migration.progress.percentage}%
+                                        {migration.progress.speed_mib_s && (
+                                          <span className="ml-2 font-normal text-[10px]">
+                                            ({migration.progress.speed_mib_s.toFixed(1)} MiB/s)
+                                          </span>
+                                        )}
                                       </span>
                                       <span className="text-gray-500 dark:text-gray-400 text-[10px]">
                                         {migration.progress.human_readable}
