Add pagination to migration history table
- Add pagination controls with First/Previous/Next/Last buttons
- Add page size selector (5, 10, 25, 50, 100 per page)
- Default to 5 migrations per page
- Show current range and total count
- Implement IIFE for efficient pagination logic
- Disable navigation buttons at boundaries
- Support dark mode styling

--- a/index.html
+++ b/index.html
@@ -326,6 +326,10 @@ const ProxBalanceLogo = ({ size = 32 }) => (
           const [logRefreshTime, setLogRefreshTime] = useState(null);
           const [migrationLogsTab, setMigrationLogsTab] = useState('history');
 
+          // Pagination for migration history
+          const [migrationHistoryPage, setMigrationHistoryPage] = useState(1);
+          const [migrationHistoryPageSize, setMigrationHistoryPageSize] = useState(5);
+
           // Chart.js lazy loading
           const [chartJsLoaded, setChartJsLoaded] = useState(false);
           const [chartJsLoading, setChartJsLoading] = useState(false);
@@ -3645,8 +3649,26 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                     {migrationLogsTab === 'history' && (
                       <div>
                         <div className="flex items-center justify-between mb-3">
-                          <div className="text-sm text-gray-600 dark:text-gray-400">
-                            Showing all automated migrations
+                          <div className="flex items-center gap-3">
+                            <div className="text-sm text-gray-600 dark:text-gray-400">
+                              {automationStatus.recent_migrations && automationStatus.recent_migrations.length > 0
+                                ? `Showing ${((migrationHistoryPage - 1) * migrationHistoryPageSize) + 1}-${Math.min(migrationHistoryPage * migrationHistoryPageSize, automationStatus.recent_migrations.length)} of ${automationStatus.recent_migrations.length} migrations`
+                                : 'No migrations'}
+                            </div>
+                            <select
+                              value={migrationHistoryPageSize}
+                              onChange={(e) => {
+                                setMigrationHistoryPageSize(Number(e.target.value));
+                                setMigrationHistoryPage(1);
+                              }}
+                              className="px-2 py-1 text-xs border border-gray-300 dark:border-gray-600 rounded bg-white dark:bg-gray-700 text-gray-900 dark:text-white"
+                            >
+                              <option value={5}>5 per page</option>
+                              <option value={10}>10 per page</option>
+                              <option value={25}>25 per page</option>
+                              <option value={50}>50 per page</option>
+                              <option value={100}>100 per page</option>
+                            </select>
                           </div>
                           <button
                             onClick={fetchAutomationStatus}
@@ -3670,7 +3692,12 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                             </thead>
                             <tbody className="divide-y divide-gray-200 dark:divide-gray-700">
                               {automationStatus.recent_migrations && automationStatus.recent_migrations.length > 0 ? (
-                                automationStatus.recent_migrations.slice().reverse().map((migration) => {
+                                (() => {
+                                  const reversedMigrations = automationStatus.recent_migrations.slice().reverse();
+                                  const startIndex = (migrationHistoryPage - 1) * migrationHistoryPageSize;
+                                  const endIndex = startIndex + migrationHistoryPageSize;
+                                  const paginatedMigrations = reversedMigrations.slice(startIndex, endIndex);
+                                  return paginatedMigrations.map((migration) => {
                                   // Format timestamp
                                   let timeDisplay = '';
                                   if (migration.timestamp) {
@@ -3734,7 +3761,8 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                                       </td>
                                     </tr>
                                   );
-                                })
+                                });
+                                })()
                               ) : (
                                 <tr>
                                   <td colSpan="6" className="px-4 py-8 text-center text-sm text-gray-500 dark:text-gray-400">
@@ -3745,6 +3773,45 @@ const ProxBalanceLogo = ({ size = 32 }) => (
                             </tbody>
                           </table>
                         </div>
+
+                        {/* Pagination Controls */}
+                        {automationStatus.recent_migrations && automationStatus.recent_migrations.length > 0 && (
+                          <div className="flex items-center justify-between mt-4 pt-4 border-t border-gray-200 dark:border-gray-700">
+                            <div className="text-sm text-gray-600 dark:text-gray-400">
+                              Page {migrationHistoryPage} of {Math.ceil(automationStatus.recent_migrations.length / migrationHistoryPageSize)}
+                            </div>
+                            <div className="flex items-center gap-2">
+                              <button
+                                onClick={() => setMigrationHistoryPage(1)}
+                                disabled={migrationHistoryPage === 1}
+                                className="px-3 py-1.5 text-sm border border-gray-300 dark:border-gray-600 rounded hover:bg-gray-50 dark:hover:bg-gray-700 disabled:opacity-50 disabled:cursor-not-allowed text-gray-700 dark:text-gray-300"
+                              >
+                                First
+                              </button>
+                              <button
+                                onClick={() => setMigrationHistoryPage(migrationHistoryPage - 1)}
+                                disabled={migrationHistoryPage === 1}
+                                className="px-3 py-1.5 text-sm border border-gray-300 dark:border-gray-600 rounded hover:bg-gray-50 dark:hover:bg-gray-700 disabled:opacity-50 disabled:cursor-not-allowed text-gray-700 dark:text-gray-300"
+                              >
+                                Previous
+                              </button>
+                              <button
+                                onClick={() => setMigrationHistoryPage(migrationHistoryPage + 1)}
+                                disabled={migrationHistoryPage >= Math.ceil(automationStatus.recent_migrations.length / migrationHistoryPageSize)}
+                                className="px-3 py-1.5 text-sm border border-gray-300 dark:border-gray-600 rounded hover:bg-gray-50 dark:hover:bg-gray-700 disabled:opacity-50 disabled:cursor-not-allowed text-gray-700 dark:text-gray-300"
+                              >
+                                Next
+                              </button>
+                              <button
+                                onClick={() => setMigrationHistoryPage(Math.ceil(automationStatus.recent_migrations.length / migrationHistoryPageSize))}
+                                disabled={migrationHistoryPage >= Math.ceil(automationStatus.recent_migrations.length / migrationHistoryPageSize)}
+                                className="px-3 py-1.5 text-sm border border-gray-300 dark:border-gray-600 rounded hover:bg-gray-50 dark:hover:bg-gray-700 disabled:opacity-50 disabled:cursor-not-allowed text-gray-700 dark:text-gray-300"
+                              >
+                                Last
+                              </button>
+                            </div>
+                          </div>
+                        )}
                       </div>
                     )}
 
